; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_symbol.c_setup_list.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_symbol.c_setup_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strlist = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"problems parsing %s list\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.strlist**, i8*, i8*)* @setup_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setup_list(%struct.strlist** %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.strlist**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.strlist** %0, %struct.strlist*** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %22

11:                                               ; preds = %3
  %12 = load i8*, i8** %6, align 8
  %13 = call %struct.strlist* @strlist__new(i32 1, i8* %12)
  %14 = load %struct.strlist**, %struct.strlist*** %5, align 8
  store %struct.strlist* %13, %struct.strlist** %14, align 8
  %15 = load %struct.strlist**, %struct.strlist*** %5, align 8
  %16 = load %struct.strlist*, %struct.strlist** %15, align 8
  %17 = icmp ne %struct.strlist* %16, null
  br i1 %17, label %21, label %18

18:                                               ; preds = %11
  %19 = load i8*, i8** %7, align 8
  %20 = call i32 @pr_err(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* %19)
  store i32 -1, i32* %4, align 4
  br label %22

21:                                               ; preds = %11
  store i32 0, i32* %4, align 4
  br label %22

22:                                               ; preds = %21, %18, %10
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local %struct.strlist* @strlist__new(i32, i8*) #1

declare dso_local i32 @pr_err(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
